# RNMP_homework2

./: .gitignore  EDA.ipynb  README.md  docker-compose.yml  main_script.sh  pyproject.toml  run_spark_scripts.sh
data/: get_data_script.sh
scripts/: run_spark_script.sh  run_spark_scripts.sh  spark_script.py
